--- a/css/styles.css
+++ b/css/styles.css
@@ -1,72 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "reset.css";
-@import "status-bar.css";
 @import "variables.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
   font-family: "Open Sans", sans-serif;
-}
-
-.welcome-header {
-  margin: 90px 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.welcome-header__title {
-  margin-bottom: 30px;
-  font-size: 30px;
-  font-weight: 600;
-}
-
-.welcome-header__text {
-  width: 60%;
-  opacity: 80%;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-#login-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 30px;
-}
-
-#login-form input {
-  border: none;
-  padding: 15px 0px;
-  font-size: 18px;
-  margin-bottom: 25px;
-}
-
-#login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: border-color 0.5 ease-in-out;
-}
-
-#login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-#login-form input:focus {
-  border-color: var(--yellow);
-}
-/*submit click시 color가 변환되게 추가한 부분*/
-#login-form input:focus[type="submit"] {
-  background-color: var(--yellow);
-}
-
-#login-form input[type="submit"] {
-  cursor: pointer;
-  padding: 20px 0px;
-  border-radius: 8px;
-}
-
-#login-form a {
-  text-align: center;
-  text-decoration: none;
-  color: inherit;
-  font-size: 13px;
 }
