--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -4,6 +4,7 @@
   align-items: center;
   margin-top: 30px;
   padding: var(--horizontal-space);
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
