--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,9 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
   padding: var(--horizontal-space);
-  margin-bottom: 15px;
+  margin-top: 20px;
 }
 
 .screen-header__title {
@@ -16,16 +15,18 @@
   margin-left: 30px;
 }
 
+/* cog-dot을 cog와 겹쳐 배치하기 위해서 클래스를 생성함 */
+.dot-position {
+  position: absolute;
+  top: 42px;
+  right: 17px;
+}
+
 .screen-header__cog-dot {
   background-color: tomato;
   width: 5px;
   height: 5px;
   border-radius: 20px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  position: relative;
-  left: 75px;
   bottom: 25px;
   color: tomato;
 }
