--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
-
+@import "screens/settings.css";
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
